fix: dark mode style + better empty password check

--- a/src/ui/scss/component/_form-field.scss
+++ b/src/ui/scss/component/_form-field.scss
@@ -53,8 +53,13 @@ textarea {
 }
 
 // @lbry/components specificityfixme
-checkbox-element input[type='checkbox']:checked + label {
+checkbox-element input[type='checkbox']:checked + label,
+checkbox-element input[type='checkbox'] + label {
   color: lighten($lbry-black, 20%);
+
+  [data-mode='dark'] & {
+    color: $lbry-gray-1;
+  }
 }
 
 fieldset-section {
